--- a/Module-2-Sol/index.html
+++ b/Module-2-Sol/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1" >
+	<title>Module 2 Assignment</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
 
+	<h1>Our menu</h1>
+<div class="row">
+	<div class="col-lg-4 col-md-6">
+		<div class="box">
+		<span id="span1">Chicken</span>
+		<p>Owing to the low cost of raising them in comparison to animals such as cattle or hogs, chickens have become prevalent throughout the cuisine of cultures around the world.</p>
+		</div>
+	</div>
+
+	<div class="col-lg-4 col-md-6">
+		<div class="box">
+		<span id="span2">Beef</span>
+		<p>Beef is the culinary name for meat from cattle, particularly skeletal muscle. Humans have been eating beef since prehistoric times. Beef is a source of high-quality protein and nutrients.</p>
+		</div>
+	</div>
+
+	<div class="col-lg-4 col-md-12">
+		<div class="box">
+		<span id="span3">Sushi</span>
+		<p>Sushi is a Japanese dish of prepared vinegared rice, usually with some sugar and salt, accompanying a variety of ingredients, such as seafood, vegetables, and occasionally tropical fruits.</p>
+		</div>
+	</div>
+</div>
+
+</body>
+</html>
